fix(Datagrid): add text overflow styling to title/desc (#3433)

--- a/packages/ibm-products/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/ibm-products/src/components/Datagrid/styles/_datagrid.scss
@@ -164,6 +164,23 @@
   width: 100%;
   padding-top: 0;
 
+  .#{$carbon-prefix}--data-table-header__description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .#{$carbon-prefix}--data-table-header__title {
+    overflow: hidden;
+    max-width: 80ch;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    @include carbon--breakpoint(md) {
+      max-width: 55ch;
+    }
+  }
+
   .#{$carbon-prefix}--data-table-content {
     width: 100%;
     height: 100%;
